# burr-fastapi-docker-compose

./: .gitignore  Dockerfile.api  Dockerfile.burr  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: actions.py  main.py  routes.py
config/: log_config.py
